fix always close bug

--- a/crm/web/WEB-INF/crmui/menu.html
+++ b/crm/web/WEB-INF/crmui/menu.html
@@ -88,7 +88,7 @@
 			<li class="active"><a href="dashbboard" class="page-url"><i class="icon-home"></i>主面板</a></li>
 			<li class="stick bg-yellow">
 				<a class="dropdown-toggle" href="#"><i class="icon-tree-view"></i>日常管理</a>
-				<ul class="dropdown-menu keep-open" data-role="dropdown">
+				<ul class="dropdown-menu" data-role="dropdown">
 					<li><a href="sys/user/list" class="page-url"><i class="fa fa-user"></i>人事管理</a></li>
 					<li><a href="sys/group/list" class="page-url" ><i class="fa fa-users"></i>部门管理</a></li>
 					<li class="divider"></li>
