just use the normal toggle behavie

--- a/crm/web/WEB-INF/crmui/index.html
+++ b/crm/web/WEB-INF/crmui/index.html
@@ -18,11 +18,11 @@
 	<script src="assets/js/jquery/jquery.min.js"></script>
 	<script src="assets/js/jquery/jquery.widget.min.js"></script>
 	<script src="assets/js/jquery/jquery.mousewheel.js"></script>
-	<script src="assets/metro/js/metro.min.js"></script>
+
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
 	<script src="assets/js/less.min.js"></script>
-
+	<script src="js/main.js"></script>
 	<title>客户关系管理系统</title>
 </head>
 <body class="metro">
@@ -90,6 +90,8 @@
 
 	</div>
 </div>
+
+<script src="assets/metro/js/metro.min.js"></script>
 
 </body>
 </html>
