--- a/crm/web/WEB-INF/crmui/sys/user/list.html
+++ b/crm/web/WEB-INF/crmui/sys/user/list.html
@@ -131,6 +131,24 @@
 				</tbody>
 			</table>
 
+
+
+		</div>
+		<div class="row text-center">
+			<div class="pagination">
+				<ul>
+					<li class="first"><a><i class="icon-first-2"></i></a></li>
+					<li class="prev"><a><i class="icon-previous"></i></a></li>
+					<li><a>1</a></li>
+					<li><a>2</a></li>
+					<li class="active"><a>3</a></li>
+					<li class="spaces"><a>...</a></li>
+					<li class="disabled"><a>4</a></li>
+					<li><a>500</a></li>
+					<li class="next"><a><i class="icon-next"></i></a></li>
+					<li class="last"><a><i class="icon-last-2"></i></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<!--/人员列表-->
